fixing conde snippet overflow in chrome on windows

--- a/_includes/css/base.css
+++ b/_includes/css/base.css
@@ -274,7 +274,7 @@
   width:90%;
 }
 
-.highlighttable pre, .highlighttable code { display:block; margin:0; padding:0; background: none; overflow:auto; word-wrap: normal; }
+.highlighttable pre, .highlighttable code { display:block; margin:0; padding:0; background: none; overflow:visible; word-wrap: normal; }
 
 .highlight, .linenodiv {
   background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQIHWPQ1dU1BgABzQC7XXMTYQAAAABJRU5ErkJggg==);
